--- a/style.css
+++ b/style.css
@@ -398,3 +398,54 @@ a.card__company{
 .post__cta img{
     margin-left:5px;
 }
+
+/*--------------------------------------------------------------
+# Forms
+--------------------------------------------------------------*/
+.wpcf7-form{
+    max-width: 500px;
+}
+.wpcf7-form label{
+    color: #212529;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+}
+.wpcf7-form textarea {
+    resize:vertical;
+}
+.wpcf7-form input,
+.wpcf7-form textarea {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.wpcf7-form .wpcf7-submit {
+    padding: 12px 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    background-color: transparent;
+    border: 1px solid transparent;
+    color: #6c757d;
+    border-color: #6c757d;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    font-size: 1rem;
+}
+.wpcf7-form .wpcf7-submit:hover {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
