--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ h1, h2, h3, h4, h5, h6{
     max-width: 500px;
     width:100%;
     display:grid;
-    grid-template-rows: min(150px) 1fr auto;
+    grid-template-rows: auto 1fr auto;
     margin: 30px auto;
     box-shadow:
         0 2.8px 2.2px rgba(0, 0, 0, 0.034),
